// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render Recipes form properly 1`] = `
<div>
  <main
    className="container"
  >
    <form
      className="needs-validation"
      onSubmit={[Function]}
    >
      <div
        className="form-group"
      >
        <label
          className="recipe-name"
          htmlFor="recipename"
        >
          Recipe Name
        </label>
        <input
          aria-describedby="recipeNameHelp"
          className="form-control recipe-name"
          id="recipename"
          onChange={[Function]}
          required={true}
          value=""
        />
        <small
          className="form-text"
          id="recipeNameHelp"
        >
          Enter a name for your recipe
        </small>
      </div>
      <div
        className="form-row"
      >
        <div
          className="form-group col-8"
        >
          <label
            className="recipe-desc"
            htmlFor="inputDescription"
          >
            Description
          </label>
          <input
            className="form-control"
            id="descriptionTextArea"
            onChange={[Function]}
            required={true}
            rows="3"
            value=""
          />
          <small
            className="form-text"
            id="descriptionHelp"
          >
            Enter a short description for your recipe.
          </small>
        </div>
        <div
          className="form-group col-4 upload-btn-wrapper"
        >
          <button
            className="btns"
          >
            Upload an Image
          </button>
          <input
            name="myfile"
            type="file"
          />
        </div>
      </div>
      <div
        className="form-group"
      >
        <label
          htmlFor="category"
        >
          Category
        </label>
        <select
          className="form-control"
          id="category"
          onChange={[Function]}
          value="Select a category for your recipe"
        >
          <option
            value="lunch"
          >
            Lunch
          </option>
          <option
            value="breakfast"
          >
            Breakfast
          </option>
          <option
            value="dessert"
          >
            Dessert
          </option>
          <option
            value="dinner"
          >
            Dinner
          </option>
          <option
            value="snacks"
          >
            Snacks
          </option>
        </select>
      </div>
      <div
        className="form-row"
      >
        <div
          className="form-group col-md-6"
        >
          <label
            className="recipe-ingredients"
            htmlFor="recipename"
          >
            Ingredients
          </label>
          <textarea
            aria-describedby="recipeNameHelp"
            className="form-control large-text"
            id="recipename"
            onChange={[Function]}
            required={true}
            value=""
          />
          <small
            className="form-text"
            id="recipeNameHelp"
          >
            Enter your recipe ingredients, separated by Commas.
          </small>
        </div>
        <div
          className="form-group col-md-6"
        >
          <label
            className="recipe-instructions"
            htmlFor="inputDescription"
          >
            Instructions
          </label>
          <textarea
            className="form-control large-text"
            id="recipeDesc"
            onChange={[Function]}
            required={true}
            rows="3"
            value=""
          />
          <small
            className="form-text"
            id="descriptionHelp"
          >
            Enter your step-by-step Instructions.
          </small>
        </div>
      </div>
      <div
        className="form-group"
      >
        <button
          className="btn btn-primary my-btn button-font btn-lg btn-block"
        >
          Submit Recipe
        </button>
      </div>
    </form>
  </main>
</div>
`;

exports[`Should render Recipes form properly with recipe data  1`] = `
<div>
  <main
    className="container"
  >
    <form
      className="needs-validation"
      onSubmit={[Function]}
    >
      <div
        className="form-group"
      >
        <label
          className="recipe-name"
          htmlFor="recipename"
        >
          Recipe Name
        </label>
        <input
          aria-describedby="recipeNameHelp"
          className="form-control recipe-name"
          id="recipename"
          onChange={[Function]}
          required={true}
          value="Amazing fried rice"
        />
        <small
          className="form-text"
          id="recipeNameHelp"
        >
          Enter a name for your recipe
        </small>
      </div>
      <div
        className="form-row"
      >
        <div
          className="form-group col-8"
        >
          <label
            className="recipe-desc"
            htmlFor="inputDescription"
          >
            Description
          </label>
          <input
            className="form-control"
            id="descriptionTextArea"
            onChange={[Function]}
            required={true}
            rows="3"
            value="A really amazing fried rice"
          />
          <small
            className="form-text"
            id="descriptionHelp"
          >
            Enter a short description for your recipe.
          </small>
        </div>
        <div
          className="form-group col-4 upload-btn-wrapper"
        >
          <button
            className="btns"
          >
            Upload an Image
          </button>
          <input
            name="myfile"
            type="file"
          />
        </div>
      </div>
      <div
        className="form-group"
      >
        <label
          htmlFor="category"
        >
          Category
        </label>
        <select
          className="form-control"
          id="category"
          onChange={[Function]}
          value="Lunch"
        >
          <option
            value="lunch"
          >
            Lunch
          </option>
          <option
            value="breakfast"
          >
            Breakfast
          </option>
          <option
            value="dessert"
          >
            Dessert
          </option>
          <option
            value="dinner"
          >
            Dinner
          </option>
          <option
            value="snacks"
          >
            Snacks
          </option>
        </select>
      </div>
      <div
        className="form-row"
      >
        <div
          className="form-group col-md-6"
        >
          <label
            className="recipe-ingredients"
            htmlFor="recipename"
          >
            Ingredients
          </label>
          <textarea
            aria-describedby="recipeNameHelp"
            className="form-control large-text"
            id="recipename"
            onChange={[Function]}
            required={true}
            value="Bread
Samolina
Beancake"
          />
          <small
            className="form-text"
            id="recipeNameHelp"
          >
            Enter your recipe ingredients, separated by Commas.
          </small>
        </div>
        <div
          className="form-group col-md-6"
        >
          <label
            className="recipe-instructions"
            htmlFor="inputDescription"
          >
            Instructions
          </label>
          <textarea
            className="form-control large-text"
            id="recipeDesc"
            onChange={[Function]}
            required={true}
            rows="3"
            value="Cook it really well
Avoid mixing with water"
          />
          <small
            className="form-text"
            id="descriptionHelp"
          >
            Enter your step-by-step Instructions.
          </small>
        </div>
      </div>
      <div
        className="form-group"
      >
        <button
          className="btn btn-primary my-btn button-font btn-lg btn-block"
        >
          Submit Recipe
        </button>
      </div>
    </form>
  </main>
</div>
`;
